[UPDATE] clean web

--- a/index.html
+++ b/index.html
@@ -179,15 +179,9 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#portfolio">
+                                    <a href="#news">
                                         <span class="first">Portfolio</span>
                                         <span class="second">Portfolio</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#news">
-                                        <span class="first">News</span>
-                                        <span class="second">News</span>
                                     </a>
                                 </li>
                                 <li>
@@ -227,8 +221,7 @@
                         <ul class="anchor_nav">
                             <li><a href="#home">Home</a></li>
                             <li><a href="#about">About</a></li>
-                            <li><a href="#portfolio">Portfolio</a></li>
-                            <li><a href="#news">News</a></li>
+                            <li><a href="#news">Portfolio</a></li>
                             <li><a href="#contact">Contact</a></li>
                         </ul>
                     </div>
@@ -340,184 +333,11 @@
             </div>
         </div>
 
-
-        <div class="waxon_tm_portoflio" id="portfolio">
-            <div class="container">
-                <div class="waxon_tm_main_title">
-                    <div class="title">
-                        <h3>Featured Works<span class="bg">Portfolio</span></h3>
-                    </div>
-                    <div class="portfolio_filter">
-                        <ul>
-                            <li>
-                                <a href="#" class="current" data-filter="*">
-<span class="first">All</span>
-<span class="second">All</span>
-</a>
-                            </li>
-                            <li>
-                                <a href="#" data-filter=".vimeo">
-<span class="first">Vimeo</span>
-<span class="second">Vimeo</span>
-</a>
-                            </li>
-                            <li>
-                                <a href="#" data-filter=".youtube">
-<span class="first">Youtube</span>
-<span class="second">Youtube</span>
-</a>
-                            </li>
-                            <li>
-                                <a href="#" data-filter=".soundcloud">
-<span class="first">Soundcloud</span>
-<span class="second">Soundcloud</span>
-</a>
-                            </li>
-                            <li>
-                                <a href="#" data-filter=".image">
-<span class="first">Image</span>
-<span class="second">Image</span>
-</a>
-                            </li>
-                        </ul>
-                        <div class="wrapper">
-                            <a href="#"><span class="trigger"></span></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="portfolio_inner">
-                    <ul class="gallery_zoom">
-                        <li class="image">
-                            <div class="list_inner">
-                                <div class="image">
-                                    <img src="img/thumbs/1-1.jpg" alt="" />
-                                    <div class="main" data-img-url="img/portfolio/4.jpg"></div>
-                                    <a class="full_link zoom" href="img/portfolio/4.jpg"></a>
-                                </div>
-                                <div class="title">
-                                    <h3><a href="#">Yellow Phone</a></h3>
-                                    <span><a href="#">Image</a></span>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="image">
-                            <div class="list_inner">
-                                <div class="image">
-                                    <img src="img/thumbs/1-1.jpg" alt="" />
-                                    <div class="main" data-img-url="img/portfolio/5.jpg"></div>
-                                    <a class="full_link zoom" href="img/portfolio/5.jpg"></a>
-                                </div>
-                                <div class="title">
-                                    <h3><a href="#">Ice Cream</a></h3>
-                                    <span><a href="#">Image</a></span>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="image">
-                            <div class="list_inner">
-                                <div class="image">
-                                    <img src="img/thumbs/1-1.jpg" alt="" />
-                                    <div class="main" data-img-url="img/portfolio/6.jpg"></div>
-                                    <a class="full_link zoom" href="img/portfolio/6.jpg"></a>
-                                </div>
-                                <div class="title">
-                                    <h3><a href="#">Good Present</a></h3>
-                                    <span><a href="#">Image</a></span>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-
-
-        <div class="waxon_tm_testimonials">
-            <div class="container">
-                <div class="waxon_tm_main_title">
-                    <div class="title">
-                        <h3>What Clients Say<span class="bg">Testimonial</span></h3>
-                    </div>
-                </div>
-                <div class="testi_inner">
-                    <div class="left">
-                        <div class="quote_list">
-                            <ul>
-                                <li class="active">
-                                    <img class="svg" src="img/svg/quote-1.svg" alt="" />
-                                    <p class="text">Good overall template. I am getting back into coding and had a simple question for the author. They responded within 30 minutes and answered my question. Highly recommend.</p>
-                                    <div class="details">
-                                        <div class="image">
-                                            <div class="main" data-img-url="img/about/1.jpg"></div>
-                                        </div>
-                                        <div class="short">
-                                            <h3 class="author"><span>Nelly Furtado</span></h3>
-                                            <h3 class="job"><span>App Developer</span></h3>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <img class="svg" src="img/svg/quote-1.svg" alt="" />
-                                    <p class="text">I can't believe I got support and my problem resolved in just minutes from posting my question. Simply amazing team and amazing theme! Thank you very much guys for excellent support! </p>
-                                    <div class="details">
-                                        <div class="image">
-                                            <div class="main" data-img-url="img/about/2.jpg"></div>
-                                        </div>
-                                        <div class="short">
-                                            <h3 class="author"><span>Brian Ederson</span></h3>
-                                            <h3 class="job"><span>Web Designer</span></h3>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <img class="svg" src="img/svg/quote-1.svg" alt="" />
-                                    <p class="text">Awesome template, well written code and looks great on any platform. The customer support is very helpful and as huge asset to this template. Overall a good design, that I am quite happy with.</p>
-                                    <div class="details">
-                                        <div class="image">
-                                            <div class="main" data-img-url="img/about/3.jpg"></div>
-                                        </div>
-                                        <div class="short">
-                                            <h3 class="author"><span>Steve Collins</span></h3>
-                                            <h3 class="job"><span>Artel Corp.</span></h3>
-                                        </div>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="right">
-                        <div class="image_list">
-                            <ul class="masonry">
-                                <li class="active masonry_item">
-                                    <div class="image">
-                                        <img src="img/thumbs/3-4.jpg" alt="" />
-                                        <div class="main" data-img-url="img/about/1.jpg"></div>
-                                    </div>
-                                </li>
-                                <li class="masonry_item">
-                                    <div class="image">
-                                        <img src="img/thumbs/4-3.jpg" alt="" />
-                                        <div class="main" data-img-url="img/about/2.jpg"></div>
-                                    </div>
-                                </li>
-                                <li class="masonry_item">
-                                    <div class="image">
-                                        <img src="img/thumbs/1-1.jpg" alt="" />
-                                        <div class="main" data-img-url="img/about/3.jpg"></div>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
         <div class="waxon_tm_news" id="news">
             <div class="container">
                 <div class="waxon_tm_main_title">
                     <div class="title">
-                        <h3>Latest News<span class="bg">News</span></h3>
+                        <h3>Featured Works<span class="bg">Portfolio</span></h3>
                     </div>
                 </div>
                 <div class="news_inner">
